[package]
name              = "multipart-rfc7578"
description       = "An implementation of multipart/form-data (RFC7578)"
authors           = ["Marat Safin <jeizsm@gmail.com>"]
documentation     = "https://docs.rs/multipart-rfc7578"
repository        = "https://github.com/jeizsm/rust-multipart-rfc7578"
keywords          = ["multipart", "form"]
categories        = ["web-programming"]
version           = "0.3.0"
readme            = "README.md"
license           = "MIT OR Apache-2.0"

[dependencies]
mime = "0.3"
rand = "0.5"
http = "0.1"
hyper = { version = "0.12", optional = true }
bytes = { version = "0.4", optional = true }
futures = { version = "0.1", optional = true }
actix-web = { version = "0.7", optional = true }

[features]

default = ["bytes", "futures"]
with-hyper = ["hyper", "bytes", "futures"]
with-actix-web = ["actix-web", "bytes", "futures"]
