[package]
name              = "multipart-rfc7578"
description       = "An implementation of multipart/form-data (RFC7578)"
authors           = ["Marat Safin <jeizsm@gmail.com>", "Ferris Tseng <ferristseng@fastmail.fm>"]
documentation     = "https://docs.rs/multipart-rfc7578"
repository        = "https://github.com/jeizsm/rust-multipart-rfc7578"
keywords          = ["hyper", "actix-web", "multipart", "form", "http"]
categories        = ["asynchronous", "web-programming"]
version           = "0.5.0"
readme            = "README.md"
license           = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
mime = "0.3"
rand = "0.5"
http = "0.1"
hyper = { version = "0.12", optional = true }
bytes = { version = "0.4", optional = true }
futures = { version = "0.1", optional = true }
actix-web = { version = "0.7", optional = true }

[features]
default = ["bytes", "futures"]
part-content-length = []
